@@ -28,6 +28,7 @@ Bug fixes
  - [eas] properly skip folders we don't want to synchronize (#3943)
  - [eas] fixed 30 mins freebusy offset with S Planner
  - [eas] now correctly handles reminders on tasks (#3964)
+ - [eas] always force save events creation over EAS (#3958)
 
 3.2.4 (2016-12-01)
 ------------------
